--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,38 +1,17 @@
 name: Tests
 
-on:
-  push:
-    branches: [ master ]
-    paths-ignore:
-      - '.gitignore'
-      - '*.md'
-      - '*.rst'
-      - 'LICENSE'
-      - 'requirements.txt'
-      - 'vdf2json/**'
-  pull_request:
-    branches: [ master ]
-    paths-ignore:
-      - '.gitignore'
-      - '*.md'
-      - '*.rst'
-      - 'LICENSE'
-      - 'requirements.txt'
-      - 'vdf2json/**'
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8, 3.9, '3.10']
+        os: [ubuntu-20.04]
+        python-version: [3.6, 3.7, 3.8, 3.9, '3.10', '3.11']
         no-coverage: [0]
         include:
-          - os: ubuntu-latest
-            python-version: pypy-2.7
-            no-coverage: 1
-          - os: ubuntu-latest
+          - os: ubuntu-20.04
             python-version: pypy-3.6
             no-coverage: 1
     steps:
